# django-handy-admin

./: .pre-commit-config.yaml  pyproject.toml
tests/base/: settings.py
tests/tests/: test_admin_site.py
